--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charSet="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="keywords" content={keywords} />
-  <meta name="description" content={description} />
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
   <title>Home</title>
   <link
     rel="apple-touch-icon"
@@ -32,6 +32,34 @@
   />
   <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="theme-color" content="#ffffff" />
+  <link
+    rel="preload"
+    href="fonts/montserrat-bold.woff2"
+    as="font"
+    type="font/woff2"
+    crossOrigin=""
+  />
+  <link
+    rel="preload"
+    href="fonts/montserrat-bold.woff"
+    as="font"
+    type="font/woff"
+    crossOrigin=""
+  />
+  <link
+    rel="preload"
+    href="fonts/open-sans-bold.woff2"
+    as="font"
+    type="font/woff2"
+    crossOrigin=""
+  />
+  <link
+    rel="preload"
+    href="fonts/open-sans-bold.woff"
+    as="font"
+    type="font/woff"
+    crossOrigin=""
+  />
 </head>
 
 <body>
