--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <link rel="manifest" href="/favicons/site.webmanifest">
   <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#603cba">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#FF6B95">
+  <meta name="msapplication-navbutton-color" content="#FF6B95">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#FF6B95">
 </head>
 
 <body>
